--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "An app for saving, viewing, and deleting notes.",
     "main": "server.js",
     "scripts": {
-        "start": "node index",
+        "start": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Ben Cummings",
